--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -33,23 +33,28 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Folder Include="Domain" />
-    <Folder Include="Domain\Enteties" />
-    <Folder Include="Helpers" />
-    <Folder Include="Services" />
+    <Folder Include="Domain\ValueObjects\" />
+    <Folder Include="Helpers\" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Domain\Enteties\Coach.cs" />
-    <Compile Include="Domain\Enteties\League.cs" />
-    <Compile Include="Domain\Enteties\Match.cs" />
-    <Compile Include="Domain\Enteties\Person.cs" />
-    <Compile Include="Domain\Enteties\Player.cs" />
-    <Compile Include="Domain\Enteties\Team.cs" />
-    <Compile Include="Domain\Enteties\TeamPerson.cs" />
-    <Compile Include="Repos\LeagueRepo.cs" />
-    <Compile Include="Repos\MatchRepo.cs" />
-    <Compile Include="Repos\PersonRepo.cs" />
-    <Compile Include="Repos\TeamRepo.cs" />
+    <Compile Include="Domain\Entities\Coach.cs" />
+    <Compile Include="Domain\Entities\League.cs" />
+    <Compile Include="Domain\Entities\Match.cs" />
+    <Compile Include="Domain\Entities\Person.cs" />
+    <Compile Include="Domain\Entities\Player.cs" />
+    <Compile Include="Domain\Entities\Team.cs" />
+    <Compile Include="Domain\Entities\TeamPerson.cs" />
+    <Compile Include="Repositories\LeagueRepository.cs" />
+    <Compile Include="Repositories\MatchRepository.cs" />
+    <Compile Include="Repositories\PersonRepository.cs" />
+    <Compile Include="Repositories\TeamRepository.cs" />
+    <Compile Include="Services\LeagueService.cs" />
+    <Compile Include="Services\MatchService.cs" />
+    <Compile Include="Services\PersonService.cs" />
+    <Compile Include="Services\TeamService.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
