--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Domain\Entities\Player.cs" />
     <Compile Include="Domain\Entities\Team.cs" />
     <Compile Include="Domain\Entities\TeamPerson.cs" />
+    <Compile Include="Domain\ValueObjects\InvalidPersonalIdException.cs" />
     <Compile Include="Domain\ValueObjects\PersonalId.cs" />
     <Compile Include="Repositories\LeagueRepository.cs" />
     <Compile Include="Repositories\MatchRepository.cs" />
