--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -33,7 +33,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Folder Include="Domain\ValueObjects\" />
     <Folder Include="Helpers\" />
   </ItemGroup>
   <ItemGroup>
@@ -44,6 +43,7 @@
     <Compile Include="Domain\Entities\Player.cs" />
     <Compile Include="Domain\Entities\Team.cs" />
     <Compile Include="Domain\Entities\TeamPerson.cs" />
+    <Compile Include="Domain\ValueObjects\PersonName.cs" />
     <Compile Include="Repositories\LeagueRepository.cs" />
     <Compile Include="Repositories\MatchRepository.cs" />
     <Compile Include="Repositories\PersonRepository.cs" />
