Refactored PersonName , added a new exception and moved all exception to a new map

--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -33,6 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Folder Include="Domain\ValueObjects" />
     <Folder Include="Helpers\" />
   </ItemGroup>
   <ItemGroup>
@@ -43,10 +44,11 @@
     <Compile Include="Domain\Entities\Player.cs" />
     <Compile Include="Domain\Entities\Team.cs" />
     <Compile Include="Domain\Entities\TeamPerson.cs" />
-    <Compile Include="Domain\ValueObjects\InvalidPersonalIdException.cs" />
     <Compile Include="Domain\ValueObjects\PersonalId.cs" />
     <Compile Include="Domain\ValueObjects\TeamOrLeagueName.cs" />
     <Compile Include="Domain\ValueObjects\PersonName.cs" />
+    <Compile Include="Exceptions\InvalidPersonalIdException.cs" />
+    <Compile Include="Exceptions\InvalidPersonNameException.cs" />
     <Compile Include="Repositories\LeagueRepository.cs" />
     <Compile Include="Repositories\MatchRepository.cs" />
     <Compile Include="Repositories\PersonRepository.cs" />
