--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -33,6 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Folder Include="Domain\ValueObjects" />
     <Folder Include="Helpers\" />
   </ItemGroup>
   <ItemGroup>
@@ -49,6 +50,9 @@
     <Compile Include="Domain\ValueObjects\PersonalId.cs" />
     <Compile Include="Domain\ValueObjects\PhoneNumber.cs" />
     <Compile Include="Domain\ValueObjects\TeamOrLeagueName.cs" />
+    <Compile Include="Domain\ValueObjects\PersonName.cs" />
+    <Compile Include="Exceptions\InvalidPersonalIdException.cs" />
+    <Compile Include="Exceptions\InvalidPersonNameException.cs" />
     <Compile Include="Repositories\LeagueRepository.cs" />
     <Compile Include="Repositories\MatchRepository.cs" />
     <Compile Include="Repositories\PersonRepository.cs" />
