--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Domain\Entities\Team.cs" />
     <Compile Include="Domain\Entities\TeamPerson.cs" />
     <Compile Include="Domain\ValueObjects\PersonalId.cs" />
+    <Compile Include="Domain\ValueObjects\PhoneNumber.cs" />
     <Compile Include="Domain\ValueObjects\TeamOrLeagueName.cs" />
     <Compile Include="Domain\ValueObjects\PersonName.cs" />
     <Compile Include="Exceptions\InvalidPersonalIdException.cs" />
