--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /packages
+/Testing/bin/Debug
+/Testing/obj/Debug
