Add CustomExceptions folder

--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -43,7 +43,7 @@
     <Compile Include="Domain\Entities\Player.cs" />
     <Compile Include="Domain\Entities\Team.cs" />
     <Compile Include="Domain\Entities\TeamPerson.cs" />
-    <Compile Include="Domain\ValueObjects\InvalidPersonalIdException.cs" />
+    <Compile Include="CustomExceptions\InvalidPersonalIdException.cs" />
     <Compile Include="Domain\ValueObjects\PersonalId.cs" />
     <Compile Include="Domain\ValueObjects\PhoneNumber.cs" />
     <Compile Include="Domain\ValueObjects\TeamOrLeagueName.cs" />
