--- a/Testing/Testing.csproj
+++ b/Testing/Testing.csproj
@@ -45,6 +45,7 @@
     <Compile Include="PersonalId.cs" />
     <Compile Include="Players.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TeamTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
