--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -32,12 +32,12 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <ItemGroup />
-	<Folder Include="Domain\ValueObjects" />
   <ItemGroup>
-    
-    
-  
+	  <Folder Include="Domain\ValueObjects" />
+  </ItemGroup>
+
+
+  <ItemGroup>
     <Compile Include="Domain\Entities\Coach.cs" />
     <Compile Include="Domain\Entities\Goal.cs" />
     <Compile Include="Domain\Entities\League.cs" />
