--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -33,11 +33,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-	  <Folder Include="Domain\ValueObjects" />
+    <Folder Include="Domain\ValueObjects" />
   </ItemGroup>
-
-
   <ItemGroup>
+    <Compile Include="CustomExceptions\InvalidPersonNameException.cs" />
     <Compile Include="Domain\Entities\Coach.cs" />
     <Compile Include="Domain\Entities\Goal.cs" />
     <Compile Include="Domain\Entities\League.cs" />
