--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -33,10 +33,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-	  <Folder Include="Domain\ValueObjects" />
+    <Folder Include="Domain\ValueObjects" />
   </ItemGroup>
-
-
   <ItemGroup>
     <Compile Include="Domain\Entities\Coach.cs" />
     <Compile Include="Domain\Entities\Goal.cs" />
@@ -52,6 +50,7 @@
     <Compile Include="Domain\ValueObjects\PersonalId.cs" />
     <Compile Include="Domain\ValueObjects\PhoneNumber.cs" />
     <Compile Include="Domain\ValueObjects\TeamOrLeagueName.cs" />
+    <Compile Include="Helpers\CreateSeriesScheual.cs" />
     <Compile Include="Helpers\Serialiser.cs" />
     <Compile Include="Repositories\IRepository.cs" />
     <Compile Include="Repositories\LeagueRepository.cs" />
