--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -33,9 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup />
-  <ItemGroup>
-    <Folder Include="Domain\ValueObjects" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Compile Include="CustomExceptions\InvalidPersonNameException.cs" />
     <Compile Include="Domain\Entities\Coach.cs" />
@@ -53,7 +51,6 @@
     <Compile Include="Domain\ValueObjects\PhoneNumber.cs" />
     <Compile Include="Domain\ValueObjects\TeamOrLeagueName.cs" />
     <Compile Include="Helpers\CreateSeriesSchedule.cs" />
-    <Compile Include="Helpers\Serialiser.cs" />
     <Compile Include="Repositories\IRepository.cs" />
     <Compile Include="Repositories\LeagueRepository.cs" />
     <Compile Include="Repositories\MatchRepository.cs" />
