skrivit test för email-validation. ändrat regex för email value-object

--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -35,6 +35,7 @@
   <ItemGroup />
   <ItemGroup />
   <ItemGroup>
+    <Compile Include="Domain\Entities\Assist.cs" />
     <Compile Include="CustomExceptions\InvalidPersonNameException.cs" />
     <Compile Include="Domain\Entities\Coach.cs" />
     <Compile Include="Domain\Entities\Goal.cs" />
@@ -52,6 +53,7 @@
     <Compile Include="Domain\ValueObjects\TeamOrLeagueName.cs" />
     <Compile Include="Helpers\CreateSeriesSchedule.cs" />
     <Compile Include="Helpers\Serializer.cs" />
+    <Compile Include="Domain\Entities\RedCard.cs" />
     <Compile Include="Repositories\IRepository.cs" />
     <Compile Include="Repositories\LeagueRepository.cs" />
     <Compile Include="Repositories\MatchRepository.cs" />
@@ -62,6 +64,7 @@
     <Compile Include="Services\MatchService.cs" />
     <Compile Include="Services\PersonService.cs" />
     <Compile Include="Services\TeamService.cs" />
+    <Compile Include="Domain\Entities\YellowCard.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
