--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -36,14 +36,17 @@
   <ItemGroup />
   <ItemGroup>
     <Compile Include="CustomExceptions\InvalidPersonNameException.cs" />
+    <Compile Include="Domain\Entities\Assist.cs" />
     <Compile Include="Domain\Entities\Coach.cs" />
     <Compile Include="Domain\Entities\Goal.cs" />
     <Compile Include="Domain\Entities\League.cs" />
     <Compile Include="Domain\Entities\Match.cs" />
     <Compile Include="Domain\Entities\Person.cs" />
     <Compile Include="Domain\Entities\Player.cs" />
+    <Compile Include="Domain\Entities\RedCard.cs" />
     <Compile Include="Domain\Entities\Team.cs" />
     <Compile Include="Domain\Entities\TeamPerson.cs" />
+    <Compile Include="Domain\Entities\YellowCard.cs" />
     <Compile Include="Domain\ValueObjects\PersonName.cs" />
     <Compile Include="CustomExceptions\InvalidPersonalIdException.cs" />
     <Compile Include="Domain\ValueObjects\Email.cs" />
