--- a/Testing/Testing.csproj
+++ b/Testing/Testing.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="PersonalId.cs" />
+    <Compile Include="PhoneNumberTest.cs" />
     <Compile Include="Players.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TeamTest.cs" />
