--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,4 @@ ModelManifest.xml
 /Server/obj/Debug/knatteligan.pdb
 /Server/obj/Debug/Server.csproj.FileListAbsolute.txt
 /Server/obj/Debug/Server.csprojResolveAssemblyReference.cache
+/Testing/Email.cs
