--- a/Testing/Testing.csproj
+++ b/Testing/Testing.csproj
@@ -42,7 +42,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Email.cs" />
+    <Compile Include="EmaiTest.cs" />
     <Compile Include="PersonalId.cs" />
     <Compile Include="PhoneNumberTest.cs" />
     <Compile Include="Players.cs" />
