--- a/Testing/Testing.csproj
+++ b/Testing/Testing.csproj
@@ -47,6 +47,7 @@
     <Compile Include="PhoneNumberTest.cs" />
     <Compile Include="Players.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SerieSchedule.cs" />
     <Compile Include="TeamTest.cs" />
   </ItemGroup>
   <ItemGroup>
