--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -43,15 +43,13 @@
     <Content Include="Resources\XMLData\YellowCards.xml" />
   </ItemGroup>
   <ItemGroup />
-  <ItemGroup>
-    <Folder Include="Helpers" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Compile Include="CustomExceptions\InvalidNumberOfTeamsException.cs" />
-    <Compile Include="Domain\Entities\Assist.cs" />
+    <Compile Include="Domain\Entities\GameEvents\Assist.cs" />
     <Compile Include="CustomExceptions\InvalidPersonNameException.cs" />
     <Compile Include="Domain\Entities\Coach.cs" />
-    <Compile Include="Domain\Entities\Goal.cs" />
+    <Compile Include="Domain\Entities\GameEvents\Goal.cs" />
     <Compile Include="Domain\Entities\League.cs" />
     <Compile Include="Domain\Entities\Match.cs" />
     <Compile Include="Domain\Entities\Person.cs" />
@@ -62,14 +60,14 @@
     <Compile Include="Domain\ValueObjects\PersonName.cs" />
     <Compile Include="CustomExceptions\InvalidPersonalIdException.cs" />
     <Compile Include="Domain\ValueObjects\Email.cs" />
-    <Compile Include="Domain\ValueObjects\PersonalId.cs" />
+    <Compile Include="Domain\ValueObjects\PersonalNumber.cs" />
     <Compile Include="Domain\ValueObjects\PhoneNumber.cs" />
     <Compile Include="Domain\ValueObjects\TeamName.cs" />
     <Compile Include="Domain\ValueObjects\LeagueName.cs" />
     <Compile Include="Helpers\CreateSeriesSchedule.cs" />
     <Compile Include="Helpers\Serializer.cs" />
     <Compile Include="Repositories\AssistRepository.cs" />
-    <Compile Include="Domain\Entities\RedCard.cs" />
+    <Compile Include="Domain\Entities\GameEvents\RedCard.cs" />
     <Compile Include="Repositories\IRepository.cs" />
     <Compile Include="Repositories\LeagueRepository.cs" />
     <Compile Include="Repositories\MatchRepository.cs" />
@@ -85,7 +83,7 @@
     <Compile Include="Services\RedCardService.cs" />
     <Compile Include="Services\TeamService.cs" />
     <Compile Include="Services\YellowCardService.cs" />
-    <Compile Include="Domain\Entities\YellowCard.cs" />
+    <Compile Include="Domain\Entities\GameEvents\YellowCard.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
