--- a/Testing/Testing.csproj
+++ b/Testing/Testing.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Email.cs" />
+    <Compile Include="MatchTest.cs" />
     <Compile Include="PersonalId.cs" />
     <Compile Include="PhoneNumberTest.cs" />
     <Compile Include="Players.cs" />
