--- a/KnatteliganWPF/KnatteliganWPF.csproj
+++ b/KnatteliganWPF/KnatteliganWPF.csproj
@@ -55,6 +55,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Converters\LeagueNameToStringConverter.cs" />
+    <Compile Include="ValidationRules\LeagueNameValidationRule.cs" />
     <Page Include="AddPlayer.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
