--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -34,6 +34,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Folder Include="Domain\ValueObjects" />
+    <Folder Include="Repositories" />
+    <Folder Include="Services" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
@@ -66,23 +68,17 @@
     <Compile Include="Domain\ValueObjects\LeagueName.cs" />
     <Compile Include="Helpers\CreateSeriesSchedule.cs" />
     <Compile Include="Helpers\Serializer.cs" />
-    <Compile Include="Repositories\AssistRepository.cs" />
     <Compile Include="Repositories\IRepository.cs" />
     <Compile Include="Repositories\LeagueRepository.cs" />
     <Compile Include="Repositories\MatchEventRepository.cs" />
     <Compile Include="Repositories\MatchRepository.cs" />
     <Compile Include="Repositories\PersonRepository.cs" />
-    <Compile Include="Repositories\RedCardRepository.cs" />
     <Compile Include="Repositories\Repository.cs" />
     <Compile Include="Repositories\TeamRepository.cs" />
-    <Compile Include="Repositories\YellowCardRepository.cs" />
-    <Compile Include="Services\AssistService.cs" />
     <Compile Include="Services\LeagueService.cs" />
     <Compile Include="Services\MatchService.cs" />
     <Compile Include="Services\PersonService.cs" />
-    <Compile Include="Services\RedCardService.cs" />
     <Compile Include="Services\TeamService.cs" />
-    <Compile Include="Services\YellowCardService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
