--- a/KnatteliganWPF/KnatteliganWPF.csproj
+++ b/KnatteliganWPF/KnatteliganWPF.csproj
@@ -64,7 +64,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="AddTeam.xaml">
+    <Page Include="AddTeamWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -79,8 +79,8 @@
     <Compile Include="AddPlayer.xaml.cs">
       <DependentUpon>AddPlayer.xaml</DependentUpon>
     </Compile>
-    <Compile Include="AddTeam.xaml.cs">
-      <DependentUpon>AddTeam.xaml</DependentUpon>
+    <Compile Include="AddTeamWindow.xaml.cs">
+      <DependentUpon>AddTeamWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
