Refactored personRepo.FindBy method

--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -32,11 +32,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <ItemGroup>
-    <Folder Include="Domain\ValueObjects" />
-    <Folder Include="Repositories" />
-    <Folder Include="Services" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup />
   <ItemGroup>
     <Compile Include="CustomExceptions\InvalidEmailException.cs" />
@@ -77,6 +73,7 @@
     <Compile Include="Repositories\Repository.cs" />
     <Compile Include="Repositories\TeamRepository.cs" />
     <Compile Include="Services\LeagueService.cs" />
+    <Compile Include="Services\MatchEventService.cs" />
     <Compile Include="Services\MatchService.cs" />
     <Compile Include="Services\PersonService.cs" />
     <Compile Include="Services\TeamService.cs" />
