Moved all logic from match into MatchService, Renamed MatchService to MatchRepositiryService

--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -62,6 +62,8 @@
     <Compile Include="Domain\ValueObjects\TeamName.cs" />
     <Compile Include="Domain\ValueObjects\LeagueName.cs" />
     <Compile Include="Helpers\CreateSeriesSchedule.cs" />
+    <Compile Include="Helpers\MatchHelper.cs" />
+    <Compile Include="Helpers\MatchService.cs" />
     <Compile Include="Helpers\MatchWeek.cs" />
     <Compile Include="Helpers\Serializer.cs" />
     <Compile Include="Helpers\SerializableDictionary.cs" />
@@ -73,7 +75,7 @@
     <Compile Include="Repositories\Repository.cs" />
     <Compile Include="Repositories\TeamRepository.cs" />
     <Compile Include="Services\LeagueService.cs" />
-    <Compile Include="Services\MatchService.cs" />
+    <Compile Include="Services\MatchRepositoryService.cs" />
     <Compile Include="Services\PersonService.cs" />
     <Compile Include="Services\TeamService.cs" />
   </ItemGroup>
