--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -32,9 +32,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <ItemGroup>
-    <Folder Include="Helpers" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup />
   <ItemGroup>
     <Compile Include="CustomExceptions\InvalidEmailException.cs" />
@@ -63,6 +61,7 @@
     <Compile Include="Domain\ValueObjects\PhoneNumber.cs" />
     <Compile Include="Domain\ValueObjects\TeamName.cs" />
     <Compile Include="Domain\ValueObjects\LeagueName.cs" />
+    <Compile Include="Helpers\ConvertHelper.cs" />
     <Compile Include="Helpers\CreateSeriesSchedule.cs" />
     <Compile Include="Helpers\MatchHelper.cs" />
     <Compile Include="Helpers\MatchWeek.cs" />
@@ -76,7 +75,7 @@
     <Compile Include="Repositories\Repository.cs" />
     <Compile Include="Repositories\TeamRepository.cs" />
     <Compile Include="Services\LeagueService.cs" />
-    <Compile Include="Services\MatchRepositoryService.cs" />
+    <Compile Include="Services\MatchService.cs" />
     <Compile Include="Services\MatchWeekService.cs" />
     <Compile Include="Services\PersonService.cs" />
     <Compile Include="Services\TeamService.cs" />
