--- a/UserHomePage/UserHomePage.csproj
+++ b/UserHomePage/UserHomePage.csproj
@@ -55,6 +55,15 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="MatchList.xaml.cs">
+      <DependentUpon>MatchList.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="PlayerStats.xaml.cs">
+      <DependentUpon>PlayerStats.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="SerieScheduleWindow.xaml.cs">
+      <DependentUpon>SerieScheduleWindow.xaml</DependentUpon>
+    </Compile>
     <Page Include="League.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -74,6 +83,18 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="MatchList.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="PlayerStats.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="SerieScheduleWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
