--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Helpers\MatchWeek.cs" />
     <Compile Include="Helpers\Serializer.cs" />
     <Compile Include="Helpers\SerializableDictionary.cs" />
+    <Compile Include="Helpers\SortingAlgoritm.cs" />
     <Compile Include="Helpers\StringUtil.cs" />
     <Compile Include="Repositories\IRepository.cs" />
     <Compile Include="Repositories\LeagueRepository.cs" />
