--- a/UserHomePage/UserHomePage.csproj
+++ b/UserHomePage/UserHomePage.csproj
@@ -64,6 +64,9 @@
     <Compile Include="SerieScheduleWindow.xaml.cs">
       <DependentUpon>SerieScheduleWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="TeamWindow.xaml.cs">
+      <DependentUpon>TeamWindow.xaml</DependentUpon>
+    </Compile>
     <Page Include="League.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -92,6 +95,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="SerieScheduleWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="TeamWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
